# SharpVoxTTS

./: .gitignore  Makefile  README.md
include/: AudioProcessor.h  KlattSynthesizer.h  KlattSynthesizerFP.h  PhonemeDefs.h  Phonemizer.h  PitchInterpolator.h  SpeechRenderer.h  SynthData.h  Tables.h
platform/cli/: Main.cpp
platform/lib/: SharpVox.cpp  SharpVox.h
platform/pc/: 1.xpm  2.xpm  3.xpm  4.xpm  5.xpm  6.xpm  7.xpm  8.xpm  9.xpm  a.out  main.cpp
platform/twatch/sharptalk/: CMakeLists.txt
platform/wasm/: SharpVoxWasm.cpp
platform/wasm/wwwroot/: index.html
platform/wasm/wwwroot/js/: KlattschHighlight.js  MidiConverter.js  MidiVideo.js  main.js  ui.js  worker.js
src/: AudioProcessor.cpp  HeteronymResolver.cpp  JapaneseParser.cpp  KlattSynthesizer.cpp  KlattSynthesizerFP.cpp  KlattschParser.cpp  LetterToSound.cpp  Morphology.cpp  Phonemizer.cpp  PitchInterpolator.cpp  SpeechRenderer.cpp  Tables.cpp  TextCommands.cpp  TtsEngine.cpp  VoicePresets.cpp
tests/: MidiTimingProbe.cpp
